Banner section mobile view fixed

--- a/public/styles/responsive.css
+++ b/public/styles/responsive.css
@@ -837,8 +837,8 @@
   }
   .hero-banner {
     height: 100%;
-    /* padding-top: 140px; */
-    /* padding-bottom: 100px; */
+    padding-top: 140px;
+    padding-bottom: 100px;
   }
   .hero-slider .swiper-button-prev, .hero-slider .swiper-button-next {
     display: none;
